Bug 1618325 - Check IsContextLost in ReadPixels. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D65435

--HG--
extra : moz-landing-system : lando